# pawsitive

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  compose.yaml  db.sqlite3  heroku.yml  package-lock.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: github-actions.yml
backend/: Dockerfile  Makefile  README.md  compose.yaml  db.sqlite3  pyproject.toml
backend/places/: models.py  serializers.py  urls.py  views.py
backend/places/migrations/: 0002_alter_place_options.py  0002_placetype_place_type.py  0003_alter_place_type.py  0003_placetype_alter_place_options_place_type.py
backend/places/templates/places/: index.html  place_confirm_delete.html  place_detail.html  place_form.html
backend/polls/: tests.py  views.py
backend/settings/: settings.py  urls.py
backend/snippets/: models.py  serializers.py  urls.py  views.py
backend/snippets/migrations/: 0001_initial.py
backend/static/: style.css
backend/templates/: base.html
config/: settings.py
docs/: README.md  definition-of-ready.md  prd.md  requirements.md
docs/collaboration/: definition_of_done.md  definition_of_ready  external_docs.md
docs/data_models/: 0002_alpha_v1.excalidraw  version_notes.md  (+1 more)
frontend/: .env.production  Dockerfile  Makefile  README.md  compose.yaml  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite-env.d.ts
pawsitive/: apps.py  tests.py  views.py
places/: models.py  urls.py  views.py
polls/: admin.py  models.py  views.py
settings/: asgi.py  settings.py  urls.py  wsgi.py
(+47 files in other folders)
