[project]
name = "pawsitive"
version = "0.1.0"
description = ""
authors = [
    {name = "gchwalik", email = "89762294+gchwalik@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "django (>=5.2,<6.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
