[project]
name = "pawsitive"
version = "0.1.0"
description = ""
authors = [{ name = "gchwalik", email = "89762294+gchwalik@users.noreply.github.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "django (>=5.2,<6.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "markdown (>=3.8,<4.0)",
    "django-filter (>=25.1,<26.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
